implement solution for data file path in jbam
- jbam now always write data file into the workspace
- jbam always write data file path absolutly
- when using read* static builder method, data file path is now infered 1) assuming an absolute path was written in the config file or 2) assuming the file is in the workspace (retrieve only the data file name from the config file)
- toDataFile now returns the data file path used